# django-admin-api

./: .gitignore  README.md  pyproject.toml
django_admin_api/: filters.py  models.py
django_admin_api/query/: __init__.py  action.py  base.py  rest.py
example/example/: settings.py  urls.py
example/products/: admin.py  fixtures.json  models.py  serializers.py  urls.py  views.py
example/products/migrations/: 0001_initial.py
