[tool.poetry]
name = "django-admin-api"
version = "0.1.0"
description = ""
authors = ["Plyushchay Nikolay <n.plyushchay@napoleonit.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
